--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "emitDecoratorMetadata": true,
     "importHelpers": true,
     "target": "es2017",
-    "module": "es2015",
+    "module": "esnext",
     "typeRoots": [
       "node_modules/@types"
     ],
